--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,43 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en" xmls:th="http://www.thymeleaf.org">
-
 <head>
-	<meta charset="ISO-8859-1">
-	<title>Biblioteca</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<meta charset="ISO-8859-1">
+<title>Biblioteca</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
 
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Mi Sitio Web</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Inicio</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Acerca de</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Servicios</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contacto</a>
+				</li>
+			</ul>
+		</div>
+		<form class="" th:action="@{/logout}" method="post">
+			<input class="btn btn-primary" type="submit" value="Cerrar Sesión" />
+		</form>
+	</nav>
+	<div th:if="${error != null}">
+		<div class="alert alert-danger" role="alert">
+			<p>[[${error}]]</p>
+		</div>
+	</div>
 	<h1 class="ml-5 mt-5">Biblioteca</h1>
 	<a href="/libros/create" class="btn btn-primary ml-5 mt-2">Agregar libro</a>
 	<section class="d-flex flex-wrap ml-3 mr-3">
@@ -19,7 +49,7 @@
 				<p th:text="${libro.autor.nombre}" class="card-text"></p>
 				<a th:href="@{'/libros/' + ${libro.id}}" class="btn btn-primary">Detalles</a>
 			</div>
-			</div>
+		</div>
 	</section>
 </body>
 
