Ver prestamos por parte del lector hecho

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<nav th:replace="fragments/nav"/>
 	<div class="alert alert-danger" role="alert">
 		<h2>Ha ocurrido un error</h2>
 	</div>
