--- a/src/main/resources/templates/crearLibro.html
+++ b/src/main/resources/templates/crearLibro.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<nav th:replace="fragments/nav"/>
 	<h1 class="ml-5 mt-5">Anadir libro</h1>
 	<a href="/" class="btn btn-primary ml-5">Volver</a>
 	<form class="form-group m-5" action="#" method="post" th:action="@{/libros}" th:object="${libro}">
