--- a/src/main/resources/templates/detallesLibro.html
+++ b/src/main/resources/templates/detallesLibro.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
+	<nav th:replace="fragments/nav"/>
 	<h1 class="ml-5 mt-5">[[${libro.titulo}]]</h1>
 	<h2 class="ml-5 mt-2">Numero de copias: [[${numCopias}]]</h2>
 	<form action="/copias/crear" method="post" class="form-group d-flex ml-5 mt-2"
 		th:object="${libro}">
 		<input id="libro_id" name="libro_id" type="number" hidden th:value="${libro.id}" />
 		<button type="submit" class="btn btn-primary">Añadir copias</button>
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 	</form>
 	<h3 class="ml-5 mt-2">Crear préstamo</h3>
 	<form action="/prestamos/crear" method="post" class="form-group ml-5 mt-2"
@@ -26,6 +28,7 @@
 			<option th:each="lector : ${lectores}" th:value="${lector.nSocio}" th:text="${lector.nombre}"></option>
 		</select>
 		<button type="submit" class="btn btn-primary">Crear préstamo</button>
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 	</form>
 	<a href="/" class="btn btn-primary ml-5 mt-3 mb-3">Volver</a>
 </body>
