--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="container">
+	<nav th:replace="fragments/nav"/>
     <h2>Regístra un nuevo usuario</h2>
     <form class="form-horizontal" method="post" th:action="@{/signup}" th:object="${user}">
         <div class="form-group">
@@ -28,6 +29,20 @@
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="lastName" name="lastName"
                        placeholder="Ejemplo: Peréz Almonte" required/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="telefono">Teléfono:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="telefono" name="telefono"
+                       placeholder="622553993" required/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="direccion">Dirección:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="direccion" name="direccion"
+                       placeholder="Calle Victor Hevia" required/>
             </div>
         </div>
         <div class="form-group">
