--- a/src/main/resources/templates/admin/crearLibro.html
+++ b/src/main/resources/templates/admin/crearLibro.html
@@ -9,9 +9,10 @@
 
 <body>
 	<nav th:replace="fragments/nav"/>
-	<h1 class="ml-5 mt-5">Anadir libro</h1>
-	<a href="/" class="btn btn-primary ml-5">Volver</a>
-	<form class="form-group m-5" action="#" method="post" th:action="@{/libros}" th:object="${libro}">
+	<a href="/" class="btn btn-primary ml-3 mt-2 ml-2">Volver</a>
+	<h1 class="ml-3 mt-3">Anadir libro</h1>
+	
+	<form class="form-group m-3 w-50" action="#" method="post" th:action="@{/libros}" th:object="${libro}">
 		<label for="titulo">Título</label>
 		<input class="form-control" th:field="*{titulo}" type="text" id="titulo" nombre="titulo">
 		<label for="anyo">Año</label>
