--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -10,6 +10,15 @@
 			<li class="nav-item active">
 				<a class="nav-link" href="/">Inicio</a>
 			</li>
+			<li class="nav-item active" sec:authorize="hasRole('ADMIN')">
+				<a href="/autores" class="nav-link">Autores</a>
+			</li>
+			<li class="nav-item active" sec:authorize="hasRole('ADMIN')">
+				<a href="/autores/crear" class="nav-link">Añadir autor</a>
+			</li>
+			<li class="nav-item active" sec:authorize="hasRole('ADMIN')">
+				<a href="/libros/create" class="nav-link">Añadir libro</a>
+			</li>
 			<li class="nav-item active" sec:authorize="hasRole('LECTOR')">
 				<a th:href="@{'/prestamos/' + ${user_id}}" class="nav-link" sec:authorize="hasRole('LECTOR')">Mis préstamos</a>
 			</li>
