--- a/src/main/resources/templates/detallesLibro.html
+++ b/src/main/resources/templates/detallesLibro.html
@@ -14,6 +14,7 @@
 		th:object="${libro}">
 		<input id="libro_id" name="libro_id" type="number" hidden th:value="${libro.id}" />
 		<button type="submit" class="btn btn-primary">Añadir copias</button>
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 	</form>
 	<h3 class="ml-5 mt-2">Crear préstamo</h3>
 	<form action="/prestamos/crear" method="post" class="form-group ml-5 mt-2"
@@ -25,8 +26,33 @@
 		<select th:field="*{lector}" class="form-control mb-2">
 			<option th:each="lector : ${lectores}" th:value="${lector.nSocio}" th:text="${lector.nombre}"></option>
 		</select>
-		<button type="submit" class="btn btn-primary">Crear préstamo</button>
+		<button type="submit" class="btn btn-primary">Crear préstamo</button>		
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 	</form>
+	<table class="table table-striped ml-5" >
+		<thead>
+			<tr>
+				<th class="text-center" scope="col" colspan="4">Préstamos en activo</th>
+			</tr>
+			<tr>
+				<th scope="col">Número de préstamo</th>
+				<th scope="col">Lector que realiza préstamo</th>
+				<th scope="col">Fecha fin de préstamo</th>
+				<th scope="col"></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="p, rowStat:${listaPrestamos}">
+				<td th:text="${rowStat.count}"></td>
+				<td th:text="${p.lector.nombre}"></td>
+				<td th:text="${p.fin}"></td>
+				<td>
+					<a th:href="@{'/delete/' + ${p.id} + '/' + ${libro.id}}"  class="btn btn-danger" >Eliminar</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	
 	<a href="/" class="btn btn-primary ml-5 mt-3 mb-3">Volver</a>
 </body>
 
