--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,16 +22,20 @@
 	</div>
 	<h1 class="ml-3 mt-3">Biblioteca</h1>
 	<a href="/libros/create" class="btn btn-primary ml-5 mt-2" sec:authorize="hasRole('ADMIN')">Agregar libro</a>
-	
+	<div class="d-flex flex-wrap">
 		<div th:each="libro:${listaLibros}" class="card m-2" style="width: 18rem;">
 			<div class="card-body">
 				<h5 th:text="${libro.titulo}" class="card-title"></h5>
 				<p th:text="${libro.tipoLibro}" class="card-text"></p>
 				<p class="card-text">[[${libro.anyo}]]</p>
 				<p th:text="${libro.autor.nombre}" class="card-text"></p>
-				<a th:href="@{'/libros/' + ${libro.id}}" class="btn btn-primary">Detalles</a>
+				<a th:href="@{'/libros/' + ${libro.id}}" sec:authorize="hasRole('ADMIN')"
+					class="btn btn-primary">Detalles</a>
+				<a th:href="@{'/prestamos/crear/' + ${libro.id}}" sec:authorize="hasRole('LECTOR')"
+					class="btn btn-primary">Crear préstamo</a>
 			</div>
 		</div>
+	</div>
 	</section>
 </body>
 
