Añadido modificacion de lectores por el Admin

--- a/src/main/resources/templates/admin/editAutores.html
+++ b/src/main/resources/templates/admin/editAutores.html
@@ -18,8 +18,8 @@
 		<input class="form-control" th:field="*{nombre}" type="text" id="nombre" nombre="nombre">
 		<label for="nacionalidad">Nacionalidad:</label>
 		<input class="form-control" th:field="*{nacionalidad}" type="text" id="nacionalidad" nombre="nacionalidad">
-		<label for="fechaNacimiento">Fecha de nacimiento:</label>
-		<input class="form-control" th:field="*{fechaNacimiento}" type="date" id="fechaNacimiento" nombre="fechaNacimiento">
+		<label for="fechaNacimiento">Dirección:</label>
+		<input class="form-control" th:field="*{direccion}" type="text" id="direccion" nombre="direccion">
 		<button type="submit" class="btn btn-info mt-2">Guardar</button>
 	</form>
 
