--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -19,6 +19,9 @@
 			<li class="nav-item active" sec:authorize="hasRole('ADMIN')">
 				<a href="/libros/create" class="nav-link">Añadir libro</a>
 			</li>
+			<li class="nav-item active" sec:authorize="hasRole('ADMIN')">
+				<a href="/lectores" class="nav-link">Lectores</a>
+			</li>
 			<li class="nav-item active" sec:authorize="hasRole('LECTOR')">
 				<a th:href="@{'/prestamos/' + ${user_id}}" class="nav-link" sec:authorize="hasRole('LECTOR')">Mis préstamos</a>
 			</li>
