Cambiada interfaz y creado restController y Añadidos unit test de rest controller

--- a/src/main/resources/templates/admin/crearLibro.html
+++ b/src/main/resources/templates/admin/crearLibro.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmls:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Biblioteca</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
+<nav th:replace="fragments/head" />
 
 <body>
 	<nav th:replace="fragments/nav"/>
