--- a/src/main/resources/templates/admin/editLectores.html
+++ b/src/main/resources/templates/admin/editLectores.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Modificar lector</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
-
+<nav th:replace="fragments/head" />
 <body>
 
 	<h1 class="ml-3 mt-2 ml-2">Modificar Lector</h1>
