--- a/src/main/resources/templates/admin/autores.html
+++ b/src/main/resources/templates/admin/autores.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Lista de autores</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
+<nav th:replace="fragments/head" />
 <body>
 	<nav th:replace="fragments/nav"/>
 	<h1 class="m-2">Autores</h1>
