--- a/src/main/resources/templates/admin/crearAutor.html
+++ b/src/main/resources/templates/admin/crearAutor.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmls:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Biblioteca</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
+<nav th:replace="fragments/head" />
 
 <body>
 	<nav th:replace="fragments/nav"/>
-	<a href="/" class="btn btn-primary ml-3">Volver</a>
+	<a href="/" class="btn btn-primary ml-3 mt-2">Volver</a>
 	<h1 class="ml-3 mt-2 ml-2">Añadir autor</h1>
 	
 	<form class="form-group m-3 w-50" action="#" method="post" th:action="@{/autores}" th:object="${autor}">
