--- a/src/main/resources/templates/admin/detallesLibro.html
+++ b/src/main/resources/templates/admin/detallesLibro.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmls:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Biblioteca</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
-
+<nav th:replace="fragments/head" />
 <body>
 	<nav th:replace="fragments/nav"/>
 	<h1 class="ml-5 mt-5">[[${libro.titulo}]]</h1>
