--- a/src/main/resources/templates/admin/editLibros.html
+++ b/src/main/resources/templates/admin/editLibros.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Modificar libro</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
+<nav th:replace="fragments/head" />
 
 <body>
 
