--- a/src/main/resources/templates/lector/listaPrestamos.html
+++ b/src/main/resources/templates/lector/listaPrestamos.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Lista de préstamos</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
+<nav th:replace="fragments/head" />
 <body>
 	<nav th:replace="fragments/nav" />
 <h1 class="m-2">Mis préstamos</h1>
