--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Iniciar sesión</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-</head>
-<body>
-<div class="container">
-	<nav th:replace="fragments/nav"/>
+<nav th:replace="fragments/head" />
 
-    <h2>Identifícate</h2>
-    <form class="form-horizontal" method="post" th:action="@{/login}">
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="username">Nombre de usuario:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="username" name="username"
-                       placeholder="Nombre de usuario" required="true" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="username">Password:</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="password" name="password"
-                       placeholder="Entre el Password" required="true" />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">Login</button>
-            </div>
-        </div>
-       
-    </form>
-    <a href="/signup" class="btn btn-primary m-3">Registrarse</a>
-</div>
+<body>
+	<nav th:replace="fragments/nav" />
+	<h2 class="m-3">Identifícate</h2>
+	<form class="m-3 form-horizontal" method="post" th:action="@{/login}">
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="username">Nombre de usuario:</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="username" name="username" placeholder="Nombre de usuario"
+					required="true" />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="username">Password:</label>
+			<div class="col-sm-10">
+				<input type="password" class="form-control" id="password" name="password"
+					placeholder="Entre el Password" required="true" />
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button type="submit" class="btn btn-primary">Login</button>
+			</div>
+		</div>
+
+	</form>
+	<a href="/signup" class="btn btn-primary m-3">Registrarse</a>
 </body>
+
 </html>
