--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -33,6 +33,6 @@
 	</div>
 
 	<form class="" th:action="@{/logout}" method="post" sec:authorize="isAuthenticated()">
-		<input class="btn btn-primary" type="submit" value="Cerrar Sesión" />
+		<input class="btn btn-primary" type="submit" value="Cerrar Sesión" id="logout"/>
 	</form>
 </nav>
