--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
 
 		<div th:each="libro:${listaLibros}" class="card m-2" style="width: 18rem;">
 			<div class="card-body">
-				<h5 th:text="${libro.titulo}" class="card-title"></h5>
+				<h5 th:text="${libro.titulo}" class="card-title" id="tituloCarta"></h5>
 				<p th:text="${libro.tipoLibro}" class="card-text"></p>
 				<p class="card-text">[[${libro.anyo}]]</p>
 				<p th:text="${libro.autor.nombre}" class="card-text"></p>
