--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -8,7 +8,7 @@
 
 		<ul class="navbar-nav p-2">
 			<li id="marks-menu" class="nav-item dropdown active" sec:authorize="hasRole('ADMIN')">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAut" role="button" data-toggle="dropdown"
 					aria-haspopup="true" aria-expanded="false"> Gestión de autores
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -17,7 +17,7 @@
 				</div>
 			</li>
 			<li id="marks-menu" class="nav-item dropdown active" sec:authorize="hasRole('ADMIN')">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownLib" role="button" data-toggle="dropdown"
 					aria-haspopup="true" aria-expanded="false"> Gestión de libros
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
