--- a/src/main/resources/templates/admin/libros.html
+++ b/src/main/resources/templates/admin/libros.html
@@ -26,7 +26,7 @@
 					<td th:text="${libro.tipoLibro}"></td>
 					<td th:text="${libro.anyo}"></td>
 					<td>
-						<a th:href="@{'/libros/update/' + ${libro.id}}" class="btn btn-info">Editar</a>
+						<a th:id="${libro.titulo}" th:href="@{'/libros/update/' + ${libro.id}}" class="btn btn-info">Editar</a>
 					</td>
 				</tr>
 			</tbody>
