--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 	<h1 class="ml-3 mt-3">Biblioteca</h1>
 	<a href="/libros/create" class="btn btn-primary ml-5 mt-2" sec:authorize="hasRole('ADMIN')">Agregar libro</a>
 
-		<div class="d-flex flex-wrap">
+		<div class="d-flex flex-wrap justify-content-center align-items-center">
 
 		<div th:each="libro:${listaLibros}" class="card m-2" style="width: 18rem;">
 			<div class="card-body">
