--- a/src/main/resources/templates/lector/crearPrestamo.html
+++ b/src/main/resources/templates/lector/crearPrestamo.html
@@ -6,10 +6,11 @@
 <body>
 	<nav th:replace="fragments/nav" />
 	<h3 class="ml-5 mt-2">Crear préstamo para [[${libro.titulo}]]</h3>
-	<form action="/prestamos/crear" method="post" class="form-group ml-5 mt-2"
-		th:object="${prestamo}" style="width: 18rem;">
-		<label for="titulo">Fecha de fin</label>
-		<input class="form-control mb-2" th:field="*{fin}" th:format="yyyy-MM-dd" th:placeholder="yyyy-MM-dd" type="date" id="fin" nombre="fin">
+	<form action="/prestamos/crear" method="post" class="form-group ml-5 mt-2" th:object="${prestamo}"
+		style="width: 18rem;">
+		<label for="fecha-fin">Fecha de fin</label>
+		<input class="form-control mb-2" th:field="*{fin}" th:format="yyyy-MM-dd" th:placeholder="yyyy-MM-dd"
+			type="date" id="fecha-fin" nombre="fecha-fin">
 		<input id="libro_id" name="libro_id" type="number" hidden th:value="${libro.id}" />
 		<select hidden th:field="*{lector}" class="form-control mb-2">
 			<option th:value="${lector.nSocio}" th:text="${lector.nombre}"></option>
@@ -17,7 +18,20 @@
 		<button type="submit" class="btn btn-primary">Crear préstamo</button>
 		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 	</form>
+	<div th:if="${error}" class="alert alert-danger w-50 m-3" role="alert">
+		[[${error}]]
+	</div>
 	<a href="/" class="btn btn-primary ml-5 mt-3 mb-3">Volver</a>
+	
+
+	<script>
+		let minimo = new Date();
+		let maximo = new Date();
+		const calendarioInicio = document.getElementById("fecha-fin");
+		calendarioInicio.setAttribute("min", minimo.toISOString().split("T")[0]);
+		maximo.setDate(minimo.getDate() + 30);
+		calendarioInicio.setAttribute("max", maximo.toISOString().split("T")[0]);
+	</script>
 </body>
 
 </html>
