--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,6 +9,7 @@
 		<h2>Ha ocurrido un error</h2>
 	</div>
 	<a href="/" class="ml-5 mt-2 btn btn-primary">Volver</a>
+	<nav th:replace="fragments/footer" />
 </body>
 
 </html>
