--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,6 +24,7 @@
 		</form>
 		<a href="/signup" class="btn btn-primary mt-2">Registrarse</a>
 	</div>
+	<nav th:replace="fragments/footer" />
 </body>
 
 </html>
