--- a/src/main/resources/templates/admin/autores.html
+++ b/src/main/resources/templates/admin/autores.html
@@ -2,11 +2,12 @@
 <html>
 
 <nav th:replace="fragments/head" />
+
 <body>
-	<nav th:replace="fragments/nav"/>
-	<h1 class="m-2">Autores</h1>
-	<div class="container">
-		<a href="/" class="btn btn-primary mb-3">Volver</a>
+	<nav th:replace="fragments/nav" />
+	<a href="/" class="btn btn-primary ml-3 mt-3">Volver</a>
+	<div class="container text-center">
+		<h1 class="m-2">Autores</h1>
 		<table class="table table-striped table-responsive-md">
 			<thead>
 				<tr>
@@ -27,13 +28,15 @@
 					<td th:text="${autor.nacionalidad}"></td>
 					<td th:text="${autor.fechaNacimiento}"></td>
 					<td>
-						<a th:id="${autor.nombre}" th:href="@{'/autores/update/' + ${autor.id}}" class="btn btn-info">Editar</a>
+						<a th:id="${autor.nombre}" th:href="@{'/autores/update/' + ${autor.id}}"
+							class="btn btn-info">Editar</a>
 						<a th:href="@{'/autores/delete/' + ${autor.id}}" class="btn btn-danger">Eliminar</a>
 					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
+	<nav th:replace="fragments/footer" />
 </body>
 
 </html>
