--- a/src/main/resources/templates/admin/crearLibro.html
+++ b/src/main/resources/templates/admin/crearLibro.html
@@ -6,9 +6,10 @@
 <body>
 	<nav th:replace="fragments/nav"/>
 	<a href="/" class="btn btn-primary ml-3 mt-2 ml-2">Volver</a>
+	<div class="d-flex flex-column justify-content-center align-items-center text-center">
 	<h1 class="ml-3 mt-3">Anadir libro</h1>
 	
-	<form class="form-group m-3 w-50" action="#" method="post" th:action="@{/libros}" th:object="${libro}">
+	<form class="card p-4 form-group m-3 w-50" action="#" method="post" th:action="@{/libros}" th:object="${libro}">
 		<label for="titulo">Título</label>
 		<input class="form-control" th:field="*{titulo}" type="text" id="titulo" nombre="titulo">
 		<label for="anyo">Año</label>
@@ -26,7 +27,8 @@
 		</select>
 		<button type="submit" class="btn btn-info mt-2">Guardar</button>
 	</form>
-
+	</div>
+	<nav th:replace="fragments/footer" />
 </body>
 
 </html>
