--- a/src/main/resources/templates/admin/editLectores.html
+++ b/src/main/resources/templates/admin/editLectores.html
@@ -5,9 +5,10 @@
 <body>
 	<nav th:replace="fragments/nav"/>
 	<a href="/" class="btn btn-primary ml-3">Volver</a>
+	<div class="d-flex flex-column justify-content-center align-items-center text-center">
 	<h1 class="ml-3 mt-2 ml-2">Modificar Lector</h1>
 
-	<form class="form-group m-3 w-50" action="#" method="post" th:action="@{/lectores}" th:object="${lector}">
+	<form class="card p-3 form-group m-3 w-50" action="#" method="post" th:action="@{/lectores}" th:object="${lector}">
 		<input type="hidden" th:field="*{nSocio}">
 		<label for="nombre">Nombre:</label>
 		<input class="form-control" th:field="*{nombre}" type="text" id="nombre" nombre="nombre">
@@ -17,8 +18,8 @@
 		<input class="form-control" th:field="*{direccion}" type="text" id="direccion" nombre="direccion">
 		<button type="submit" class="btn btn-info mt-2">Guardar</button>
 	</form>
-
-
+	</div>
+<nav th:replace="fragments/footer" />
 </body>
 
 </html>
