--- a/src/main/resources/templates/admin/editLibros.html
+++ b/src/main/resources/templates/admin/editLibros.html
@@ -4,27 +4,29 @@
 <nav th:replace="fragments/head" />
 
 <body>
+	<nav th:replace="fragments/nav" />
+	<a href="/" class="btn btn-primary ml-3">Volver</a>
+	<div class="d-flex flex-column justify-content-center align-items-center text-center">
+		<h1 class="ml-3 mt-2 ml-2">Modificar Libro</h1>
 
-	<h1 class="ml-3 mt-2 ml-2">Modificar Libro</h1>
-
-	<form class="form-group m-3 w-50" action="#" method="post" th:action="@{/libros}" th:object="${libro}">
-		<input type="hidden" th:field="*{id}">
-		<input type="hidden" th:field="*{autor}">
-		<label for="titulo">Título del libro:</label>
-		<input class="form-control" th:field="*{titulo}" type="text" id="titulo" nombre="titulo">
-		<label for="tipoLibro">Tipo de libro</label>
-		<select class="form-control" id="tipoLibro" name="tipoLibro" th:field="*{tipoLibro}">
-			<option value="NOVELA">Novela</option>
-			<option value="ENSAYO">Esayo</option>
-			<option value="POESIA">Poesía</option>
-			<option value="TEATRO">Teatro</option>
-		</select>
-		<label for="fechaNacimiento">Año de publicación:</label>
-		<input class="form-control" th:field="*{anyo}" type="text" id="anyo" nombre="anyo">
-		<button type="submit" class="btn btn-info mt-2">Guardar</button>
-	</form>
-
-
+		<form class="card p-4 form-group m-3 w-50" action="#" method="post" th:action="@{/libros}" th:object="${libro}">
+			<input type="hidden" th:field="*{id}">
+			<input type="hidden" th:field="*{autor}">
+			<label for="titulo">Título del libro:</label>
+			<input class="form-control" th:field="*{titulo}" type="text" id="titulo" nombre="titulo">
+			<label for="tipoLibro">Tipo de libro</label>
+			<select class="form-control" id="tipoLibro" name="tipoLibro" th:field="*{tipoLibro}">
+				<option value="NOVELA">Novela</option>
+				<option value="ENSAYO">Esayo</option>
+				<option value="POESIA">Poesía</option>
+				<option value="TEATRO">Teatro</option>
+			</select>
+			<label for="fechaNacimiento">Año de publicación:</label>
+			<input class="form-control" th:field="*{anyo}" type="text" id="anyo" nombre="anyo">
+			<button type="submit" class="btn btn-info mt-2">Guardar</button>
+		</form>
+	</div>
+<nav th:replace="fragments/footer" />
 </body>
 
 </html>
