--- a/src/main/resources/templates/admin/lectores.html
+++ b/src/main/resources/templates/admin/lectores.html
@@ -3,9 +3,9 @@
 <nav th:replace="fragments/head" />
 <body>
 	<nav th:replace="fragments/nav"/>
+	<a href="/" class="btn btn-primary ml-3 mt-3">Volver</a>
+	<div class="container text-center">
 	<h1 class="m-2">Lectores</h1>
-	<div class="container">
-		<a href="/" class="btn btn-primary mb-3">Volver</a>
 		<table class="table table-striped table-responsive-md">
 			<thead>
 				<tr>
@@ -32,5 +32,6 @@
 			</tbody>
 		</table>
 	</div>
+	<nav th:replace="fragments/footer" />
 </body>
 </html>
