--- a/src/main/resources/templates/lector/listaPrestamos.html
+++ b/src/main/resources/templates/lector/listaPrestamos.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <nav th:replace="fragments/head" />
+
 <body>
 	<nav th:replace="fragments/nav" />
-<h1 class="m-2">Mis préstamos</h1>
-<div class="container">
-	<a href="/" class="btn btn-primary mb-3">Volver</a>
+	<a href="/" class="btn btn-primary ml-3 mt-3">Volver</a>
+	<div class="container text-center">
+		<h1 class="m-2">Mis préstamos</h1>
 		<table class="table table-striped table-responsive-md">
 			<thead>
 				<tr>
@@ -18,6 +19,9 @@
 					<th>
 						Fecha de fin
 					</th>
+					<th>
+						Estado
+					</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -25,15 +29,24 @@
 					<td th:text="${prestamo.titulo_libro}"></td>
 					<td th:text="${prestamo.inicio}"></td>
 					<td th:text="${prestamo.fin}"></td>
+					<td th:if="${prestamo.copia == null}">
+						DEVUELTO
+					</td>
 					<td th:if="${prestamo.copia != null}">
-						<a th:href="@{'/prestamos/devolver/' + ${lector_id} + '/' + ${prestamo.id}}" class="btn btn-primary">Devolver</a>
+						[[${prestamo.copia.estadoCopia}]]
+					</td>
+					<td th:if="${prestamo.copia != null}">
+						<a th:href="@{'/prestamos/devolver/' + ${lector_id} + '/' + ${prestamo.id}}"
+							class="btn btn-primary">Devolver</a>
 					</td>
 					<td th:if="${prestamo.copia == null}">
-						<a th:href="@{'/prestamos/devolver/' + ${lector_id} + '/' + ${prestamo.id}}" class="btn btn-primary disabled">Devolver</a>
+						
 					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
+	<nav th:replace="fragments/footer" />
 </body>
+
 </html>
