--- a/src/main/resources/templates/admin/autores.html
+++ b/src/main/resources/templates/admin/autores.html
@@ -2,8 +2,9 @@
 <html>
 
 <nav th:replace="fragments/head" />
+
 <body>
-	<nav th:replace="fragments/nav"/>
+	<nav th:replace="fragments/nav" />
 	<h1 class="m-2">Autores</h1>
 	<div class="container">
 		<a href="/" class="btn btn-primary mb-3">Volver</a>
@@ -22,18 +23,48 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="autor:${autores}">
+				<tr th:each="autor:${listaAutores}">
 					<td th:text="${autor.nombre}"></td>
 					<td th:text="${autor.nacionalidad}"></td>
 					<td th:text="${autor.fechaNacimiento}"></td>
 					<td>
-						<a th:id="${autor.nombre}" th:href="@{'/autores/update/' + ${autor.id}}" class="btn btn-info">Editar</a>
+						<a th:id="${autor.nombre}" th:href="@{'/autores/update/' + ${autor.id}}"
+							class="btn btn-info">Editar</a>
 						<a th:href="@{'/autores/delete/' + ${autor.id}}" class="btn btn-danger">Eliminar</a>
 					</td>
 				</tr>
 			</tbody>
 		</table>
-	</div>
+		<!-- Botonera para moverme entre las paginas -->
+		<div th:if="${totalPages > 1}" class="container">
+			<!-- Si hay más de una página, aparece la botonera, si no, no aparece (claridad) -->
+			<div class="row col-sm-10"><!-- Una fila con varias columnas-->
+				<div class="col-sm-5">Total de filas: [[${totalItems}]]</div>
+				<div class="col-sm-3">
+					<span th:each="i : ${#numbers.sequence(1, totalPages)}">
+						<a th:if="${currentPage != 1}"
+							th:href="@{'/autores/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
+							<!--Le paso la ruta para que vaya a la página correspondiente -->
+							[[${i}]]
+						</a>
+						<span th:unless="${currentPage != 1}"> [[${i}]]</span>
+					</span>
+				</div><!-- Cierra el col-sm-3 -->
+				<div class="col-sm-1">
+					<a th:if="${currentPage < totalPages}"
+						th:href="@{'/autores/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
+						Próxima
+					</a>
+				</div>
+				<div class="col-sm-1">
+					<a th:if="${currentPage < totalPages}"
+						th:href="@{'/autores/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
+						Última
+					</a>
+				</div>
+			</div> <!-- Cierra el row -->
+		</div> <!-- Cierra el if -->
+	</div><!-- fin de div de toda la pagina -->
 </body>
 
 </html>
