--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,9 +19,9 @@
 	<h1 class="ml-3 mt-3">Biblioteca</h1>
 	<a href="/libros/create" class="btn btn-primary ml-5 mt-2" sec:authorize="hasRole('ADMIN')">Agregar libro</a>
 
-		<div class="d-flex flex-wrap">
+	<div class="d-flex flex-wrap">
 
-		<div th:each="libro:${listaLibros}" class="card m-2" style="width: 18rem;">
+		<div th:each="libro:${listaLibrosPag}" class="card m-2" style="width: 18rem;">
 			<div class="card-body">
 				<h5 th:text="${libro.titulo}" class="card-title" id="tituloCarta"></h5>
 				<p th:text="${libro.tipoLibro}" class="card-text"></p>
@@ -32,8 +32,38 @@
 				<a th:href="@{'/prestamos/crear/' + ${libro.id}}" sec:authorize="hasRole('LECTOR')"
 					class="btn btn-primary">Crear préstamo</a>
 			</div>
-			</div>
+
 		</div>
+		<div th:if="${totalPages > 1}" class="container">
+			<!-- Si hay más de una página, aparece la botonera, si no, no aparece (claridad) -->
+			<div class="row col-sm-10"><!-- Una fila con varias columnas-->
+				<div class="col-sm-5">Total de filas: [[${totalItems}]]</div>
+				<!-- El enlace en texto en tylh es con [] -->
+				<div class="col-sm-3">
+					<span th:each="i:${#numbers.sequence(1,totalPages)}">
+						<a th:if="${currentPage != 1}"
+							th:href="@{'/libros/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
+							<!--Le paso la ruta para que vaya a la página correspondiente -->
+							[[${i}]]
+						</a>
+						<span th:unless="${currentPage != 1}"> [[${i}]]</span>
+					</span>
+				</div><!-- Cierra el col-sm-3 -->
+				<div class="col-sm-1">
+					<a th:if="${currentPage < totalPages}"
+						th:href="@{'/libros/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
+						Proxima
+					</a>
+				</div>
+				<div class="col-sm-1">
+					<a th:if="${currentPage < totalPages}"
+						th:href="@{'/libros/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
+						Última
+					</a>
+				</div>
+			</div> <!-- Cierra el row -->
+		</div>
+	</div>
 	</div>
 	</section>
 </body>
