--- a/src/main/resources/templates/admin/autores.html
+++ b/src/main/resources/templates/admin/autores.html
@@ -9,19 +9,39 @@
 	<a href="/" class="btn btn-primary ml-3 mt-3">Volver</a>
 	<div class="container text-center">
 		<h1 class="m-2">Autores</h1>
+		<form action="/autores/filtros/page/1" method="get">
+			<div class="form-group">
+				<label for="nacionalidad">Filtrar por nacionalidad:</label>
+				<input type="text" id="nacionalidad" name="nacionalidad" class="form-control"
+					placeholder="Introduce la nacionalidad" />
+				<input type="text" hidden id="sortField" name="sortField" value="nombre">
+				<input type="text" hidden id="sortDir" name="sortDir" value="asc">
+			</div>
 
+			<button type="submit" class="btn btn-primary mb-3">Filtrar</button>
+		</form>
 		<table class="table table-striped table-responsive-md">
 			<thead>
 				<tr>
 					<th>
-						Nombre
+						<a
+							th:href="@{'/autores/page/' + ${currentPage} + '?sortField=nombre&sortDir=' + ${reverseSortDir}}">
+							Título del libro
+						</a>
 					</th>
 					<th>
-						Nacionalidad
+						<a
+							th:href="@{'/autores/page/' + ${currentPage} + '?sortField=nacionalidad&sortDir=' + ${reverseSortDir}}">
+							Nacionalidad
+						</a>
 					</th>
 					<th>
-						Fecha de nacimiento
+						<a
+							th:href="@{'/autores/page/' + ${currentPage} + '?sortField=fechaNacimiento&sortDir=' + ${reverseSortDir}}">
+							Fecha de nacimiento
+						</a>
 					</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
