--- a/src/main/resources/templates/admin/libros.html
+++ b/src/main/resources/templates/admin/libros.html
@@ -4,22 +4,29 @@
 
 <body>
 
-	<nav th:replace="fragments/nav"/>
+	<nav th:replace="fragments/nav" />
 	<a href="/" class="btn btn-primary ml-3 mt-3">Volver</a>
 	<div class="container text-center">
 
-	<h1 class="m-2">Libros</h1>
+		<h1 class="m-2">Libros</h1>
+		
 		<table class="table table-striped table-responsive-md">
 			<thead>
 				<tr>
 					<th>
+						<a th:href="@{'/libros/editar/page/' + ${currentPage} + '?sortField=titulo&sortDir=' + ${reverseSortDir}}">
 						Título del libro
+						</a>
 					</th>
 					<th>
-						Tipo de libro
+						<a th:href="@{'/libros/editar/page/' + ${currentPage} + '?sortField=tipoLibro&sortDir=' + ${reverseSortDir}}">
+						Tipo libro
+						</a>
 					</th>
 					<th>
-						Año de publicación
+						<a th:href="@{'/libros/editar/page/' + ${currentPage} + '?sortField=anyo&sortDir=' + ${reverseSortDir}}">
+						Año publicación
+						</a>
 					</th>
 				</tr>
 			</thead>
