--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,6 +22,9 @@
 			</div>
 
 		</form>
+		<div th:if="${param.error}" class="alert alert-danger w-fit m-3" role="alert">
+			El usuario y la contraseña no coinciden
+		</div>
 		<a href="/signup" class="btn btn-primary mt-2">Registrarse</a>
 	</div>
 	<nav th:replace="fragments/footer" />
