--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -50,7 +50,7 @@
 					placeholder="Repita el Password" />
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-primary">Enviar</button>
+				<button type="submit" class="btn btn-primary" id="registro">Enviar</button>
 			</div>
 		</form>
 		
