--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 						placeholder="Contraseña" required="true" />
 			</div>
 			<div class="form-group">
-					<button type="submit" class="btn btn-primary">Login</button>
+					<button type="submit" class="btn btn-primary" id="login">Login</button>
 			</div>
 
 		</form>
